<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp"
    tools:context=".presentation.characters.CharactersFragment">

    <LinearLayout
        android:id="@+id/linearLayoutRaces"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFilter"
        app:layout_constraintEnd_toStartOf="@+id/buttonFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonFilter">

        <TextView
            android:id="@+id/btnHuman"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/human"
            android:textAlignment="center"
            android:textSize="@dimen/small_size"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@drawable/selectable_button"/>

        <TextView
            android:id="@+id/btnDwarf"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dwarf"
            android:textAlignment="center"
            android:textSize="@dimen/small_size"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@drawable/selectable_button"/>

        <TextView
            android:id="@+id/btnHobbit"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hobbit"
            android:textAlignment="center"
            android:textSize="@dimen/small_size"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@drawable/selectable_button"/>

        <TextView
            android:id="@+id/btnElf"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/elf"
            android:textAlignment="center"
            android:textSize="@dimen/small_size"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@drawable/selectable_button"/>



    </LinearLayout>

    <TextView
        android:id="@+id/textViewNothing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/nothing_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/ic_search"
        android:fontFamily="@font/sf_pro_display_regular"
        android:hint=" Search"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAlignment="viewStart"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:theme="@style/CircularProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFilter"
        app:layout_constraintVertical_bias="0.0">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:listitem="@layout/cell_character" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/buttonFilter"
        android:layout_marginTop="4dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@drawable/selectable_button" />

</androidx.constraintlayout.widget.ConstraintLayout>