<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNothing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/nothing_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:theme="@style/CircularProgress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.65" />

                    <ImageView

                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/rounded_rectangle" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        app:cardCornerRadius="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            tools:srcCompat="@drawable/img_book_1" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textViewBook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/cardView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/book_one" />

                    <TextView
                        android:id="@+id/textViewWriter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:text="@string/writer"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/sub_title_size"
                        app:layout_constraintEnd_toEndOf="@+id/textViewBook"
                        app:layout_constraintStart_toStartOf="@+id/textViewBook"
                        app:layout_constraintTop_toBottomOf="@+id/textViewBook" />


                    <TextView
                        android:id="@+id/textViewQuotes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:text="@string/movie"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/links"
                        android:textSize="@dimen/list_size"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="@+id/textViewWriter"
                        app:layout_constraintStart_toStartOf="@+id/textViewWriter" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingTop="8dp" />


            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>